--- a/路由导航.md
+++ b/路由导航.md
@@ -58,3 +58,52 @@ AppBar(
     });
 ```
 
+### 命名路由(named route)
+
+- `routes : Map<String, WidgetBuilder>`
+- `MaterialApp`中进行管理
+
+```
+MaterialApp(
+       // home: HJRouteTestPage(),
+      ///设置应用程序从哪一个路由开始启动，设置了该属性，就不需要再设置home属性了
+      initialRoute: '/',
+      routes: {
+        HJRouteAboutPage.routeName: (ctx) => HJRouteAboutPage(),
+        HJRouteTestPage.routeName:(ctx) => HJRouteTestPage()
+      },
+    );
+```
+
+- 跳转
+
+```
+Navigator.pushNamed(ctx, HJRouteAboutPage.routeName,arguments: 'from route test');
+
+/// 拿到命名路由传递的参数
+final _msg = ModalRoute.of(context).settings.arguments;
+```
+
+#### 路由钩子
+
+```
+///找不到路由时调用, 跳转的界面需要参数，命名路由不太方便
+      onGenerateRoute: (settings){
+        if (settings.name == HJRouteDetailPage.routeName){
+          return MaterialPageRoute(builder: (ctx){
+            return HJRouteDetailPage(settings.arguments);
+          });
+        }
+        return null;
+      },
+      
+ /// 未找到路由，跳转统一界面
+      onUnknownRoute: (settings){
+        return MaterialPageRoute(builder: (ctx){
+          return HJRouteUnknownPage();
+        });
+      },
+```
+
+
+
