自己的字符串。国际化

--- a/国际化.md
+++ b/国际化.md
@@ -47,3 +47,126 @@ dependencies:
 
 ![image-20210706194046232](./image/image-20210706194046232.png)
 
+
+
+### 对自己写的字符串进行国际化
+
+1. 写个本地化管理类
+
+```
+import 'package:flutter/material.dart';
+
+class HJLocalManager {
+
+  final Locale local;
+  HJLocalManager(this.local);
+
+  static Map<String,Map<String,String>> _localValues = {
+    "en": {
+      "title": "home",
+      "text": "Tap",
+      "btnText": "Pick a Time"
+    },
+    "zh": {
+      "title": "首页",
+      "text": "点击",
+      "btnText": "选择一个时间"
+    }
+  };
+
+  String? get title {
+    return _localValues[local.languageCode]?['title'];
+  }
+  String? get text {
+    return _localValues[local.languageCode]?['text'];
+  }
+  String? get btnText {
+    return _localValues[local.languageCode]?['btnText'];
+  }
+  
+  /// 优化方法
+  static HJLocalManager of(BuildContext context) {
+    return Localizations.of(context, HJLocalManager);
+  }
+
+}
+```
+
+2. 定义一个对象的Delegate类，实现重写方法，传入localizationsDelegates
+
+```
+
+
+import 'package:flutter/cupertino.dart';
+import 'package:flutter/foundation.dart';
+import 'package:internationalization/HJLocalManager.dart';
+
+class HJLocalDelegate extends LocalizationsDelegate<HJLocalManager>{
+  @override
+  ///当前环境的Locale，是否在我们支持的语言范围
+  bool isSupported(Locale locale) {
+    // TODO: implement isSupported
+    return ['en','zh'].contains(locale.languageCode);
+  }
+
+  @override
+  /// 当Locale发生改变时（语言环境），加载对应的HYLocalizations资源
+  Future<HJLocalManager> load(Locale locale) {
+    // TODO: implement load
+    return SynchronousFuture(HJLocalManager(locale));
+  }
+
+  @override
+  ///当Localizations Widget重新build时，是否调用load方法重新加载Locale资源
+  bool shouldReload(covariant LocalizationsDelegate old) {
+    // TODO: implement shouldReload
+    return false;
+  }
+  static HJLocalDelegate delegate = HJLocalDelegate();
+  
+}
+```
+
+3. 使用
+
+```
+localizationsDelegates: [
+        /// 指定本地化的字符串和一些其他的值
+        GlobalMaterialLocalizations.delegate,
+        /// 对应的Cupertino风格
+        GlobalCupertinoLocalizations.delegate,
+        /// 指定默认的文本排列方向, 由左到右或由右到左
+        GlobalWidgetsLocalizations.delegate,
+        /// 加入自定义的delegate
+        HJLocalDelegate.delegate
+      ]
+      
+      
+
+Scaffold(
+      appBar: AppBar(
+        title: Text(HJLocalManager.of(context).title??''),
+      ),
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: [
+            Text(HJLocalManager.of(context).text??'',style: TextStyle(fontSize: 20),),
+            ElevatedButton(
+                onPressed: () {
+                  showDatePicker(
+                      context: context,
+                      initialDate: DateTime.now(),
+                      firstDate: DateTime(2000),
+                      lastDate: DateTime(3000));
+                },
+                child: Text(
+                  HJLocalManager.of(context).btnText??'',
+                  style: TextStyle(fontSize: 24),
+                ))
+          ],
+        ),
+      ),
+    );
+```
+
