--- a/国际化.md
+++ b/国际化.md
@@ -54,7 +54,10 @@ dependencies:
 1. 写个本地化管理类
 
 ```
+import 'dart:convert';
+
 import 'package:flutter/material.dart';
+import 'package:flutter/services.dart';
 
 class HJLocalManager {
 
@@ -62,17 +65,31 @@ class HJLocalManager {
   HJLocalManager(this.local);
 
   static Map<String,Map<String,String>> _localValues = {
-    "en": {
-      "title": "home",
-      "text": "Tap",
-      "btnText": "Pick a Time"
-    },
-    "zh": {
-      "title": "首页",
-      "text": "点击",
-      "btnText": "选择一个时间"
-    }
+    // "en": {
+    //   "title": "home",
+    //   "text": "Tap",
+    //   "btnText": "Pick a Time"
+    // },
+    // "zh": {
+    //   "title": "首页",
+    //   "text": "点击",
+    //   "btnText": "选择一个时间"
+    // }
   };
+
+  /// 异步加载json文件
+  Future<bool> loadLocalValues() async {
+    final jsonStr = await rootBundle.loadString('assets/json/localValues.json');
+
+    /// json -> map
+    Map<String,dynamic> result = json.decode(jsonStr);
+    /// 遍历每个键值对
+    _localValues = result.map((key, value) {
+      // 将Map<String, dynamic>转成Map<String, Map<String, String>>类型
+      return MapEntry(key, value.cast<String,String>());
+    });
+    return true;
+  }
 
   String? get title {
     return _localValues[local.languageCode]?['title'];
@@ -83,23 +100,20 @@ class HJLocalManager {
   String? get btnText {
     return _localValues[local.languageCode]?['btnText'];
   }
-  
+
   /// 优化方法
   static HJLocalManager of(BuildContext context) {
     return Localizations.of(context, HJLocalManager);
   }
-
 }
 ```
 
 2. 定义一个对象的Delegate类，实现重写方法，传入localizationsDelegates
 
 ```
-
-
 import 'package:flutter/cupertino.dart';
 import 'package:flutter/foundation.dart';
-import 'package:internationalization/HJLocalManager.dart';
+import 'package:internationalization/HJLocalizations/HJLocalManager.dart';
 
 class HJLocalDelegate extends LocalizationsDelegate<HJLocalManager>{
   @override
@@ -111,9 +125,12 @@ class HJLocalDelegate extends LocalizationsDelegate<HJLocalManager>{
 
   @override
   /// 当Locale发生改变时（语言环境），加载对应的HYLocalizations资源
-  Future<HJLocalManager> load(Locale locale) {
+  Future<HJLocalManager> load(Locale locale) async {
     // TODO: implement load
-    return SynchronousFuture(HJLocalManager(locale));
+    //return SynchronousFuture(HJLocalManager(locale));
+    final localization = HJLocalManager(locale);
+    await localization.loadLocalValues();
+    return localization;
   }
 
   @override
@@ -122,8 +139,8 @@ class HJLocalDelegate extends LocalizationsDelegate<HJLocalManager>{
     // TODO: implement shouldReload
     return false;
   }
+
   static HJLocalDelegate delegate = HJLocalDelegate();
-  
 }
 ```
 
