arb 文件· 友好的国际化

--- a/国际化.md
+++ b/国际化.md
@@ -187,3 +187,90 @@ Scaffold(
     );
 ```
 
+## 工具
+
+### arb文件
+
+- 安装`Flutter Intl`插件
+
+![image-20210707171353455](./image/image-20210707171353455.png)
+
+- 初始化插件
+
+![image-20210707171650096](./image/image-20210707171650096.png)
+
+- 会多出一些文件
+  - generated是自动生成的dart代码
+  - I10n是对应的arb文件目录
+
+![image-20210707171835490](./image/image-20210707171835490.png)
+
+### 使用
+
+- 配置`supportedLocales`
+
+```
+supportedLocales: S.delegate.supportedLocales,
+```
+
+- 配置`localizationsDelegates`,增加`S.delegate`
+
+```
+localizationsDelegates: [
+        /// 指定本地化的字符串和一些其他的值
+        GlobalMaterialLocalizations.delegate,
+        /// 对应的Cupertino风格
+        GlobalCupertinoLocalizations.delegate,
+        /// 指定默认的文本排列方向, 由左到右或由右到左
+        GlobalWidgetsLocalizations.delegate,
+        HJLocalDelegate.delegate,
+        S.delegate
+      ]
+```
+
+- 编写`arb`文件
+
+```
+比如将下面json复制到intl_en.arb文件
+{
+  "title": "home",
+  "text": "Tap",
+  "btnText": "Pick a Time"
+}
+```
+
+- 使用
+
+```
+S.of(context).title
+```
+
+- 添加其他语言，如中文
+
+![image-20210707172957332](./image/image-20210707172957332.png)
+
+- 会生成对应的文件
+
+![image-20210707173145713](./image/image-20210707173145713.png)
+
+- 配置对应的中文到`zh.arb`即可使用
+
+### 其他语法
+
+- 传参数配置
+
+```
+{
+  "title": "首页",
+  "text": "点击",
+  "btnText": "选择一个时间",
+  "subText": "巴卡巴卡 {name}"
+}
+```
+
+- 传参使用
+
+```
+Text(S.of(context).subText('海贼·王路飞'))
+```
+
