--- a/测试.md
+++ b/测试.md
@@ -1,5 +1,7 @@
 ## 测试简介
 
+### 测试
+
 - 依赖
 
 ![image-20210708105026847](./image/image-20210708105026847.png)
@@ -69,4 +71,17 @@ testWidgets('HJWidget test', (WidgetTester tester) async{
 - - findsNothing：验证没有可被查找的 widgets。
   - findsWidgets：验证一个或多个 widgets 被找到。
   - findsNWidgets：验证特定数量的 widgets 被找到。
+
+### 集成测试
+
+- ### 添加flutter_driver依赖
+
+```
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  test: any
+```
 
