flutter driver 集成测试

--- a/测试.md
+++ b/测试.md
@@ -85,3 +85,136 @@ dev_dependencies:
   test: any
 ```
 
+- demo应用程序代码
+
+```
+import 'package:flutter/material.dart';
+
+void main() => runApp(MyApp());
+
+class MyApp extends StatelessWidget {
+  // This widget is the root of your application.
+  @override
+  Widget build(BuildContext context) {
+    return MaterialApp(
+      title: 'Flutter Demo',
+      theme: ThemeData(
+        primarySwatch: Colors.blue,
+      ),
+      home: MyHomePage(title: 'Flutter Demo Home Page'),
+    );
+  }
+}
+
+class MyHomePage extends StatefulWidget {
+  MyHomePage({Key? key, this.title}) : super(key: key);
+
+  final String? title;
+
+  @override
+  _MyHomePageState createState() => _MyHomePageState();
+}
+
+class _MyHomePageState extends State<MyHomePage> {
+  int _counter = 0;
+
+  void _incrementCounter() {
+    setState(() {
+      _counter++;
+    });
+  }
+
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(
+        title: Text(widget.title??''),
+      ),
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: <Widget>[
+            Text(
+              'You have pushed the button this many times:',
+            ),
+            Text(
+              '$_counter',
+              key: ValueKey("counter"),
+              style: Theme.of(context).textTheme.headline1,
+            ),
+          ],
+        ),
+      ),
+      floatingActionButton: FloatingActionButton(
+        key: ValueKey("increment"),
+        onPressed: _incrementCounter,
+        tooltip: 'Increment',
+        child: Icon(Icons.add),
+      ), // This trailing comma makes auto-formatting nicer for build methods.
+    );
+  }
+}
+
+```
+
+- 1.用于启动带测试的应用程序 2.编写测试的代码
+
+![image-20210708145553113](/Users/huang_jaye/Desktop/Git/flutter_learn/image/image-20210708145553113.png)
+
+```
+app.dart代码
+
+import 'package:flutter_driver/driver_extension.dart';
+import 'package:test_hj/main.dart' as app;
+
+void main() {
+  // 1.初始化Driver
+  enableFlutterDriverExtension();
+
+  // 2.启动应用程序
+  app.main();
+}
+
+
+app_test.dart代码
+
+import 'package:flutter_driver/flutter_driver.dart';
+import 'package:test/test.dart';
+
+void main() {
+
+  group("counter application test", () {
+    FlutterDriver? driver ;
+
+    setUpAll(() async {
+      driver = await FlutterDriver.connect();
+    });
+
+    tearDownAll(() {
+      if (driver != null) {
+        driver!.close();
+      }
+    });
+
+    final textFinder = find.byValueKey("counter");
+    final buttonFinder = find.byValueKey("increment");
+
+    test(("starts at 0"), () async {
+      if (driver != null) {
+        expect(await driver!.getText(textFinder), "0");
+      }
+    });
+
+    test(("on tap click"), () async {
+      if (driver != null) {
+        await driver!.tap(buttonFinder);
+        expect(await driver!.getText(textFinder), "1");
+      }
+    });
+  });
+}
+```
+
+- 项目文件夹运行`flutter drive --target=test_driver/app.dart`
+
+![image-20210708150508947](./image/image-20210708150508947.png)
